Fixed some urls

--- a/forumdisplay.php-f=18.html
+++ b/forumdisplay.php-f=18.html
@@ -911,7 +911,7 @@ thời gian 5h chiều...">
 	<td class="alt2" title="Replies: 47, Views: 933">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-02-2005 <span class="time">19:30</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=49212#post49212"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=2197.html#post49212"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1176,7 +1176,7 @@ Như đã hẹn, 18h có mặt tại cổng trường, hôm ấy mát giời, an
 	<td class="alt2" title="Replies: 23, Views: 420">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-11-2003 <span class="time">21:43</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=16017#post16017"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=847.html#post16017"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1280,7 +1280,7 @@ Như đã hẹn, 18h có mặt tại cổng trường, hôm ấy mát giời, an
 	<td class="alt2" title="Replies: 55, Views: 623">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-10-2003 <span class="time">17:47</span><br />
- by <a href="#" rel="nofollow">blue_ocean</a> <a href="showthread.php?p=12273#post12273"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">blue_ocean</a> <a href="showthread.php-t=675.html#post12273"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1438,7 +1438,7 @@ Như đã hẹn, 18h có mặt tại cổng trường, hôm ấy mát giời, an
 	<td class="alt2" title="Replies: 43, Views: 429">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  15-08-2003 <span class="time">15:23</span><br />
- by <a href="#" rel="nofollow">zorro</a> <a href="showthread.php?p=9834#post9834"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">zorro</a> <a href="showthread.php-t=566.html#post9834"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
