--- a/forumdisplay.php-f=31.html
+++ b/forumdisplay.php-f=31.html
@@ -515,7 +515,7 @@ Mail: ninhnt@vsao.vn">
 	<td class="alt2" title="Replies: 1, Views: 91">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-03-2011 <span class="time">10:06</span><br />
- by <a href="#" rel="nofollow">Unregistered</a> <a href="showthread.php?p=372180#post372180"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Unregistered</a> <a href="showthread.php-t=11293.html#post372180"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -2326,7 +2326,7 @@ Các bạn có thể chỉ mình cách khắc phục ?">
 	<td class="alt2" title="Replies: 0, Views: 97">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-06-2009 <span class="time">00:41</span><br />
- by <a href="#" rel="nofollow">ngtrietlam</a> <a href="showthread.php?p=328984#post328984"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">ngtrietlam</a> <a href="showthread.php-t=8277.html#post328984"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -3549,7 +3549,7 @@ Có phải em là Man mới nên muốn tỏ...">
 	<td class="alt2" title="Replies: 0, Views: 157">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-10-2008 <span class="time">22:44</span><br />
- by <a href="#" rel="nofollow">gau poo</a> <a href="showthread.php?p=285675#post285675"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">gau poo</a> <a href="showthread.php-t=6987.html#post285675"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
