--- a/forumdisplay.php-f=67.html
+++ b/forumdisplay.php-f=67.html
@@ -4849,7 +4849,7 @@ Không biết đến bao giờ anh em mình mới có dịp dạo chơi cùng nh
 	<td class="alt2" title="Replies: 24, Views: 535">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  28-09-2004 <span class="time">13:57</span><br />
- by <a href="#" rel="nofollow">burself</a> <a href="showthread.php?p=40000#post40000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">burself</a> <a href="showthread.php-t=1546.html#post40000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -4901,7 +4901,7 @@ Không biết đến bao giờ anh em mình mới có dịp dạo chơi cùng nh
 	<td class="alt2" title="Replies: 67, Views: 991">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-07-2004 <span class="time">22:19</span><br />
- by <a href="#" rel="nofollow">bach_idust</a> <a href="showthread.php?p=38453#post38453"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">bach_idust</a> <a href="showthread.php-t=1029.html#post38453"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5064,7 +5064,7 @@ hồn tôi bay mất theo nàng ta.">
 	<td class="alt2" title="Replies: 17, Views: 295">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-05-2004 <span class="time">06:32</span><br />
- by <a href="#" rel="nofollow">thu7codon</a> <a href="showthread.php?p=34048#post34048"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">thu7codon</a> <a href="showthread.php-t=1528.html#post34048"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5123,7 +5123,7 @@ Mà...">
 	<td class="alt2" title="Replies: 25, Views: 380">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  31-03-2004 <span class="time">12:31</span><br />
- by <a href="#" rel="nofollow">blue_ocean</a> <a href="showthread.php?p=27000#post27000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">blue_ocean</a> <a href="showthread.php-t=182.html#post27000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5182,7 +5182,7 @@ yeu em anh...">
 	<td class="alt2" title="Replies: 15, Views: 268">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  28-12-2003 <span class="time">02:35</span><br />
- by <a href="#" rel="nofollow">pridon</a> <a href="showthread.php?p=17342#post17342"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">pridon</a> <a href="showthread.php-t=670.html#post17342"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5234,7 +5234,7 @@ yeu em anh...">
 	<td class="alt2" title="Replies: 18, Views: 279">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-08-2003 <span class="time">17:00</span><br />
- by <a href="#" rel="nofollow">12345</a> <a href="showthread.php?p=9987#post9987"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">12345</a> <a href="showthread.php-t=5.html#post9987"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5342,7 +5342,7 @@ Sau đây là những gì mà em còn nhớ.">
 	<td class="alt2" title="Replies: 31, Views: 264">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-07-2003 <span class="time">15:35</span><br />
- by <a href="#" rel="nofollow">Chikorita</a> <a href="showthread.php?p=7538#post7538"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Chikorita</a> <a href="showthread.php-t=438.html#post7538"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
