--- a/memberlist.php.html
+++ b/memberlist.php.html
@@ -170,7 +170,7 @@
 
 <table class="tborder" cellpadding="6" cellspacing="1" border="0" width="100%" align="center">
 <tr align="center">
-	<td class="thead" align="left" nowrap="nowrap"><a href="#">User Name</a> <a href="memberlist.php?&amp;order=desc&amp;sort=username&amp;pp=9999&amp;page=1"><img class="inlineimg" src="styles/klstyle/buttons/sortdesc.gif" alt="Reverse Sort Order" border="0" /></a></td>
+	<td class="thead" align="left" nowrap="nowrap"><a href="#">User Name</a> <a href="#"><img class="inlineimg" src="styles/klstyle/buttons/sortdesc.gif" alt="Reverse Sort Order" border="0" /></a></td>
 	
 	<td class="thead" nowrap="nowrap">Instant Messaging</td>
 	
