--- a/ourclass.php-f=66-group=1.html
+++ b/ourclass.php-f=66-group=1.html
@@ -8779,7 +8779,7 @@ có thêm 2 bạn gái thì zui">
 	<td class="alt2" title="Replies: 37, Views: 275">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  18-03-2006 <span class="time">15:03</span><br />
- by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php?p=127182#post127182"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php-t=3493.html#post127182"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -13023,7 +13023,7 @@ Level: Mới có 75 thôi hic hic
 	<td class="alt2" title="Replies: 27, Views: 189">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-01-2006 <span class="time">08:42</span><br />
- by <a href="#" rel="nofollow">kid28</a> <a href="showthread.php?p=106190#post106190"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kid28</a> <a href="showthread.php-t=3206.html#post106190"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -14781,7 +14781,7 @@ hê hê, thế bây h các bác kể ra xem thế nào nhé :D tiện thể xem 
 	<td class="alt2" title="Replies: 86, Views: 478">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  26-11-2005 <span class="time">20:11</span><br />
- by <a href="#" rel="nofollow">vip_pro27</a> <a href="showthread.php?p=95304#post95304"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">vip_pro27</a> <a href="showthread.php-t=3030.html#post95304"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -15682,7 +15682,7 @@ Có gì thì thứ 7 nè có bạn nao thích thì đến dạ hội trường m
 	<td class="alt2" title="Replies: 24, Views: 179">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-11-2005 <span class="time">16:05</span><br />
- by <a href="#" rel="nofollow">nuare_alone</a> <a href="showthread.php?p=90045#post90045"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">nuare_alone</a> <a href="showthread.php-t=3009.html#post90045"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -16748,7 +16748,7 @@ và cũng chả tin được là lần cuối...">
 	<td class="alt2" title="Replies: 78, Views: 431">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-10-2005 <span class="time">21:30</span><br />
- by <a href="#" rel="nofollow">tantei</a> <a href="showthread.php?p=84115#post84115"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tantei</a> <a href="showthread.php-t=2831.html#post84115"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
