--- a/ourclass.php-f=66-group=6.html
+++ b/ourclass.php-f=66-group=6.html
@@ -3655,7 +3655,7 @@ cứ lập ra vậy">
 	<td class="alt2" title="Replies: 54, Views: 533">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  02-02-2006 <span class="time">09:35</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=113523#post113523"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=3066.html#post113523"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -4616,7 +4616,7 @@ gật đầu đi, em ơi đừng có...">
 	<td class="alt2" title="Replies: 191, Views: 780">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-10-2005 <span class="time">17:33</span><br />
- by <a href="#" rel="nofollow">loiloan</a> <a href="showthread.php?p=85484#post85484"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loiloan</a> <a href="showthread.php-page=2-t=2600.html#post85484"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -4831,7 +4831,7 @@ Mai tớ mua súng nước đến bắn cho vui đây">
 	<td class="alt2" title="Replies: 42, Views: 219">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-10-2005 <span class="time">14:50</span><br />
- by <a href="#" rel="nofollow">_SinRiE_</a> <a href="showthread.php?p=83895#post83895"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">_SinRiE_</a> <a href="showthread.php-t=2859.html#post83895"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -4993,7 +4993,7 @@ Na ơi anh ... em">
 	<td class="alt2" title="Replies: 214, Views: 1.109">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-09-2005 <span class="time">09:37</span><br />
- by <a href="#" rel="nofollow">Wasssup</a> <a href="showthread.php?p=81199#post81199"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Wasssup</a> <a href="showthread.php-page=3-t=2753.html#post81199"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5100,7 +5100,7 @@ Anh em ơi dzô đê&#33;&#33;&#33;">
 	<td class="alt2" title="Replies: 380, Views: 1.595">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  10-09-2005 <span class="time">23:02</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=78370#post78370"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-page=4-t=2557.html#post78370"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5152,7 +5152,7 @@ Anh em ơi dzô đê&#33;&#33;&#33;">
 	<td class="alt2" title="Replies: 30, Views: 193">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-09-2005 <span class="time">18:21</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=76071#post76071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2768.html#post76071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5261,7 +5261,7 @@ Mở hàng luôn:. * . * . * . * . * *...">
 	<td class="alt2" title="Replies: 21, Views: 146">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-09-2005 <span class="time">00:19</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=75408#post75408"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2739.html#post75408"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5319,7 +5319,7 @@ Và không chat chit,">
 	<td class="alt2" title="Replies: 61, Views: 237">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-09-2005 <span class="time">11:15</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=75104#post75104"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2708.html#post75104"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5374,7 +5374,7 @@ Và không chat chit,">
 	<td class="alt2" title="Replies: 178, Views: 650">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-08-2005 <span class="time">22:49</span><br />
- by <a href="#" rel="nofollow">X_girl</a> <a href="showthread.php?p=74175#post74175"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">X_girl</a> <a href="showthread.php-page=2-t=2689.html#post74175"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5426,7 +5426,7 @@ Và không chat chit,">
 	<td class="alt2" title="Replies: 33, Views: 275">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-08-2005 <span class="time">07:15</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=73787#post73787"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2665.html#post73787"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -5813,7 +5813,7 @@ Lập topic này cho dân Hiphop khối 10 vào chơi nhé... (Ai ko Hiphop vào
 	<td class="alt2" title="Replies: 220, Views: 1.175">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-08-2005 <span class="time">10:57</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=69084#post69084"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-page=3-t=2436.html#post69084"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -7167,7 +7167,7 @@ Tôi yêu Hoàng Anh.Tôi yêu Hoàng Anh.Tôi yêu Hoàng Anh. B-) B-) :)">
 	<td class="alt2" title="Replies: 60, Views: 504">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-06-2005 <span class="time">11:41</span><br />
- by <a href="#" rel="nofollow">quanghoa89</a> <a href="showthread.php?p=62583#post62583"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">quanghoa89</a> <a href="showthread.php-t=2265.html#post62583"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -7221,7 +7221,7 @@ Nếu coá 2 thằng cùng ngỏ lời với mình (hihi :&quot;&gt; nghe coá v
 	<td class="alt2" title="Replies: 71, Views: 376">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-06-2005 <span class="time">10:17</span><br />
- by <a href="#" rel="nofollow">Lyly_Knight</a> <a href="showthread.php?p=62565#post62565"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Lyly_Knight</a> <a href="showthread.php-t=2531.html#post62565"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -7326,7 +7326,7 @@ thứ nhất...">
 	<td class="alt2" title="Replies: 22, Views: 178">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-05-2005 <span class="time">22:18</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=60076#post60076"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2302.html#post60076"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -8134,7 +8134,7 @@ nhóm đấy chỉ có ba thành viên thôi :smiling_boy115
 	<td class="alt2" title="Replies: 17, Views: 205">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  23-02-2005 <span class="time">00:06</span><br />
- by <a href="#" rel="nofollow">X_girl</a> <a href="showthread.php?p=50795#post50795"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">X_girl</a> <a href="showthread.php-t=2257.html#post50795"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
