--- a/search.php-do=finduser-starteronly=1-u=1075.html
+++ b/search.php-do=finduser-starteronly=1-u=1075.html
@@ -340,7 +340,7 @@
 	<td class="alt2" title="Replies: 18, Views: 509">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-11-2004 <span class="time">02:23</span><br />
- by <a href="#" rel="nofollow">masta_wu</a> <a href="showthread.php?p=42921#post42921"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">masta_wu</a> <a href="showthread.php-t=1877.html#post42921"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
