--- a/search.php-do=finduser-starteronly=1-u=108.html
+++ b/search.php-do=finduser-starteronly=1-u=108.html
@@ -285,7 +285,7 @@
 	<td class="alt2" title="Replies: 201, Views: 1.643">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  28-11-2005 <span class="time">21:32</span><br />
- by <a href="#" rel="nofollow">yeu1nguoi</a> <a href="showthread.php?p=96322#post96322"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">yeu1nguoi</a> <a href="showthread.php-page=3-t=1189.html#post96322"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -395,7 +395,7 @@ Tui thấy HP rất hấp dẫn,...">
 	<td class="alt2" title="Replies: 28, Views: 340">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-04-2004 <span class="time">00:48</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=27113#post27113"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=1209.html#post27113"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -456,7 +456,7 @@ yeu em anh...">
 	<td class="alt2" title="Replies: 15, Views: 268">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  28-12-2003 <span class="time">02:35</span><br />
- by <a href="#" rel="nofollow">pridon</a> <a href="showthread.php?p=17342#post17342"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">pridon</a> <a href="showthread.php-t=670.html#post17342"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -631,7 +631,7 @@ nói trc nha, lớp em con...">
 	<td class="alt2" title="Replies: 55, Views: 623">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-10-2003 <span class="time">17:47</span><br />
- by <a href="#" rel="nofollow">blue_ocean</a> <a href="showthread.php?p=12273#post12273"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">blue_ocean</a> <a href="showthread.php-t=675.html#post12273"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
