--- a/search.php-do=finduser-starteronly=1-u=11.html
+++ b/search.php-do=finduser-starteronly=1-u=11.html
@@ -520,7 +520,7 @@ Còn mọi người thía nào ?">
 	<td class="alt2" title="Replies: 44, Views: 517">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-06-2004 <span class="time">09:12</span><br />
- by <a href="#" rel="nofollow">kissmebabe</a> <a href="showthread.php?p=37247#post37247"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kissmebabe</a> <a href="showthread.php-t=1260.html#post37247"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -746,7 +746,7 @@ Các bác (nam) đang ngồi với bạn gái trong công viên ( cứ tạm coi
 	<td class="alt2" title="Replies: 48, Views: 378">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-04-2004 <span class="time">01:38</span><br />
- by <a href="#" rel="nofollow">hunter</a> <a href="showthread.php?p=29948#post29948"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">hunter</a> <a href="showthread.php-t=1361.html#post29948"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -862,7 +862,7 @@ Chả hỉu như thế nào nữa :wah: :wah:">
 	<td class="alt2" title="Replies: 40, Views: 420">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  31-03-2004 <span class="time">08:16</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=26983#post26983"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=197.html#post26983"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1202,7 +1202,7 @@ NTT dạo này hình như khá hơn cái hồi mình còn học :D :D">
 	<td class="alt2" title="Replies: 63, Views: 566">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  22-07-2003 <span class="time">04:20</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=8204#post8204"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=158.html#post8204"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1260,7 +1260,7 @@ Cho em tham gia với :D :D :D">
 	<td class="alt2" title="Replies: 26, Views: 199">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-07-2003 <span class="time">02:54</span><br />
- by <a href="#" rel="nofollow">kurapika</a> <a href="showthread.php?p=7550#post7550"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kurapika</a> <a href="showthread.php-t=443.html#post7550"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1319,7 +1319,7 @@ Giở sách ra nào :D
 	<td class="alt2" title="Replies: 46, Views: 412">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  29-06-2003 <span class="time">13:19</span><br />
- by <a href="#" rel="nofollow">ami</a> <a href="showthread.php?p=7266#post7266"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">ami</a> <a href="showthread.php-t=242.html#post7266"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
