--- a/search.php-do=finduser-starteronly=1-u=113.html
+++ b/search.php-do=finduser-starteronly=1-u=113.html
@@ -394,7 +394,7 @@ Thật sự là hôm nay em cảm thấy rất ức chế,về mọi chuyện.Em
 	<td class="alt2" title="Replies: 12, Views: 231">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-10-2004 <span class="time">17:17</span><br />
- by <a href="#" rel="nofollow">sweetmemory</a> <a href="showthread.php?p=40443#post40443"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">sweetmemory</a> <a href="showthread.php-t=1826.html#post40443"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
