--- a/search.php-do=finduser-starteronly=1-u=1147.html
+++ b/search.php-do=finduser-starteronly=1-u=1147.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 30, Views: 193">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-09-2005 <span class="time">18:21</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=76071#post76071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2768.html#post76071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -395,7 +395,7 @@ Nhạc rap được hình thành bởi các...">
 	<td class="alt2" title="Replies: 21, Views: 597">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  26-02-2005 <span class="time">08:53</span><br />
- by <a href="#" rel="nofollow">ken</a> <a href="showthread.php?p=51095#post51095"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">ken</a> <a href="showthread.php-t=2135.html#post51095"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
