--- a/search.php-do=finduser-starteronly=1-u=1171.html
+++ b/search.php-do=finduser-starteronly=1-u=1171.html
@@ -3979,7 +3979,7 @@ Em bị mất cái bộ cài nên không đọc được cái hướng dẫn&#33
 	<td class="alt2" title="Replies: 18, Views: 123">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  12-09-2005 <span class="time">09:49</span><br />
- by <a href="#" rel="nofollow">sin</a> <a href="showthread.php?p=78891#post78891"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">sin</a> <a href="showthread.php-t=2821.html#post78891"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -4087,7 +4087,7 @@ Em bị mất cái bộ cài nên không đọc được cái hướng dẫn&#33
 	<td class="alt2" title="Replies: 19, Views: 99">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-09-2005 <span class="time">12:06</span><br />
- by <a href="#" rel="nofollow">sportVIP</a> <a href="showthread.php?p=75923#post75923"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">sportVIP</a> <a href="showthread.php-t=2697.html#post75923"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
