--- a/search.php-do=finduser-starteronly=1-u=133.html
+++ b/search.php-do=finduser-starteronly=1-u=133.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 89, Views: 633">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  11-01-2004 <span class="time">14:04</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=18932#post18932"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=746.html#post18932"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
