--- a/search.php-do=finduser-starteronly=1-u=138.html
+++ b/search.php-do=finduser-starteronly=1-u=138.html
@@ -459,7 +459,7 @@ Mình ước làm sao cho mẹ mình mau khỏi bệnh, nhiều lúc...">
 	<td class="alt2" title="Replies: 13, Views: 149">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  22-03-2004 <span class="time">06:05</span><br />
- by <a href="#" rel="nofollow">kukiheobi</a> <a href="showthread.php?p=25434#post25434"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kukiheobi</a> <a href="showthread.php-t=1217.html#post25434"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
