--- a/search.php-do=finduser-starteronly=1-u=14.html
+++ b/search.php-do=finduser-starteronly=1-u=14.html
@@ -779,7 +779,7 @@ Vóc dáng thể thao đặc...">
 	<td class="alt2" title="Replies: 43, Views: 429">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  15-08-2003 <span class="time">15:23</span><br />
- by <a href="#" rel="nofollow">zorro</a> <a href="showthread.php?p=9834#post9834"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">zorro</a> <a href="showthread.php-t=566.html#post9834"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
