--- a/search.php-do=finduser-starteronly=1-u=1443.html
+++ b/search.php-do=finduser-starteronly=1-u=1443.html
@@ -393,7 +393,7 @@
 	<td class="alt2" title="Replies: 48, Views: 2.518">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  29-01-2005 <span class="time">21:45</span><br />
- by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php?p=48324#post48324"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php-t=2183.html#post48324"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
