--- a/search.php-do=finduser-starteronly=1-u=1448.html
+++ b/search.php-do=finduser-starteronly=1-u=1448.html
@@ -503,7 +503,7 @@ One choked his...">
 	<td class="alt2" title="Replies: 33, Views: 275">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-08-2005 <span class="time">07:15</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=73787#post73787"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2665.html#post73787"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
