--- a/search.php-do=finduser-starteronly=1-u=15.html
+++ b/search.php-do=finduser-starteronly=1-u=15.html
@@ -885,7 +885,7 @@ Thị Nở...">
 	<td class="alt2" title="Replies: 19, Views: 907">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-07-2003 <span class="time">10:16</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=8808#post8808"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=251.html#post8808"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1101,7 +1101,7 @@ Thị Nở...">
 	<td class="alt2" title="Replies: 11, Views: 164">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  28-12-2002 <span class="time">02:19</span><br />
- by <a href="#" rel="nofollow">ROCKFAN</a> <a href="showthread.php?p=1633#post1633"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">ROCKFAN</a> <a href="showthread.php-t=109.html#post1633"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
