--- a/search.php-do=finduser-starteronly=1-u=150.html
+++ b/search.php-do=finduser-starteronly=1-u=150.html
@@ -574,7 +574,7 @@ hehe,chắc với PT bậc 3 thì mọi người hầu như dùng cách nhẩm n
 	<td class="alt2" title="Replies: 35, Views: 286">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  31-01-2005 <span class="time">01:29</span><br />
- by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php?p=48414#post48414"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php-t=1259.html#post48414"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -741,7 +741,7 @@ Thật ra, việc có những phim đồi truỵ mà &quot;nhân vật chính&qu
 	<td class="alt2" title="Replies: 70, Views: 2.074">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-06-2004 <span class="time">02:41</span><br />
- by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php?p=36000#post36000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php-t=1344.html#post36000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -795,7 +795,7 @@ Thật ra, việc có những phim đồi truỵ mà &quot;nhân vật chính&qu
 	<td class="alt2" title="Replies: 14, Views: 313">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  20-05-2004 <span class="time">21:52</span><br />
- by <a href="#" rel="nofollow">wyn</a> <a href="showthread.php?p=32856#post32856"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">wyn</a> <a href="showthread.php-t=911.html#post32856"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1022,7 +1022,7 @@ Dạng games...">
 	<td class="alt2" title="Replies: 36, Views: 544">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-02-2004 <span class="time">12:31</span><br />
- by <a href="#" rel="nofollow">kawaii_sb</a> <a href="showthread.php?p=22123#post22123"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kawaii_sb</a> <a href="showthread.php-t=1083.html#post22123"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
