--- a/search.php-do=finduser-starteronly=1-u=156.html
+++ b/search.php-do=finduser-starteronly=1-u=156.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 27, Views: 216">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-04-2004 <span class="time">06:25</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=27204#post27204"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=1228.html#post27204"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
