--- a/search.php-do=finduser-starteronly=1-u=1580.html
+++ b/search.php-do=finduser-starteronly=1-u=1580.html
@@ -234,7 +234,7 @@ http://www.amishdonkey.com/swf/jurq/italia...ian_english.swf ...">
 	<td class="alt2" title="Replies: 21, Views: 361">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-05-2005 <span class="time">14:03</span><br />
- by <a href="#" rel="nofollow">lord_idust</a> <a href="showthread.php?p=58479#post58479"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">lord_idust</a> <a href="showthread.php-t=2255.html#post58479"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
