--- a/search.php-do=finduser-starteronly=1-u=162.html
+++ b/search.php-do=finduser-starteronly=1-u=162.html
@@ -607,7 +607,7 @@
 	<td class="alt2" title="Replies: 11, Views: 96">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  21-10-2003 <span class="time">14:35</span><br />
- by <a href="#" rel="nofollow">pink_rose</a> <a href="showthread.php?p=13249#post13249"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">pink_rose</a> <a href="showthread.php-t=750.html#post13249"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
