--- a/search.php-do=finduser-starteronly=1-u=1623.html
+++ b/search.php-do=finduser-starteronly=1-u=1623.html
@@ -231,7 +231,7 @@ Lập topic này cho dân Hiphop khối 10 vào chơi nhé... (Ai ko Hiphop vào
 	<td class="alt2" title="Replies: 220, Views: 1.175">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-08-2005 <span class="time">10:57</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=69084#post69084"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-page=3-t=2436.html#post69084"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -340,7 +340,7 @@ Lập topic này cho dân Hiphop khối 10 vào chơi nhé... (Ai ko Hiphop vào
 	<td class="alt2" title="Replies: 60, Views: 504">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-06-2005 <span class="time">11:41</span><br />
- by <a href="#" rel="nofollow">quanghoa89</a> <a href="showthread.php?p=62583#post62583"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">quanghoa89</a> <a href="showthread.php-t=2265.html#post62583"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
