--- a/search.php-do=finduser-starteronly=1-u=183.html
+++ b/search.php-do=finduser-starteronly=1-u=183.html
@@ -673,7 +673,7 @@ mời mọi người post quetions tui sẽ answer đầy đủ :x">
 	<td class="alt2" title="Replies: 23, Views: 253">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-04-2004 <span class="time">23:32</span><br />
- by <a href="#" rel="nofollow">funpool</a> <a href="showthread.php?p=27260#post27260"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">funpool</a> <a href="showthread.php-t=1245.html#post27260"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
