--- a/search.php-do=finduser-starteronly=1-u=1999.html
+++ b/search.php-do=finduser-starteronly=1-u=1999.html
@@ -347,7 +347,7 @@ Mở hàng luôn:. * . * . * . * . * *...">
 	<td class="alt2" title="Replies: 21, Views: 146">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-09-2005 <span class="time">00:19</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=75408#post75408"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2739.html#post75408"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
