--- a/search.php-do=finduser-starteronly=1-u=205.html
+++ b/search.php-do=finduser-starteronly=1-u=205.html
@@ -230,7 +230,7 @@ p/s : khi nao` có anh? sẽ post lên">
 	<td class="alt2" title="Replies: 125, Views: 1.521">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  23-07-2005 <span class="time">21:45</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=67742#post67742"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-page=2-t=2500.html#post67742"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -284,7 +284,7 @@ p/s : khi nao` có anh? sẽ post lên">
 	<td class="alt2" title="Replies: 60, Views: 654">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-02-2005 <span class="time">04:45</span><br />
- by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php?p=48822#post48822"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php-t=1242.html#post48822"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -500,7 +500,7 @@ p/s : khi nao` có anh? sẽ post lên">
 	<td class="alt2" title="Replies: 58, Views: 433">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  11-04-2004 <span class="time">09:24</span><br />
- by <a href="#" rel="nofollow">babysadlove</a> <a href="showthread.php?p=28895#post28895"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">babysadlove</a> <a href="showthread.php-t=1153.html#post28895"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -554,7 +554,7 @@ p/s : khi nao` có anh? sẽ post lên">
 	<td class="alt2" title="Replies: 29, Views: 322">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  09-04-2004 <span class="time">00:47</span><br />
- by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php?p=28467#post28467"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php-t=1218.html#post28467"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
