--- a/search.php-do=finduser-starteronly=1-u=2117.html
+++ b/search.php-do=finduser-starteronly=1-u=2117.html
@@ -963,7 +963,7 @@ Thu nhập của người mẹ : 2.000.000/tháng
 	<td class="alt2" title="Replies: 31, Views: 260">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-04-2006 <span class="time">20:47</span><br />
- by <a href="#" rel="nofollow">tpsatthu</a> <a href="showthread.php?p=129504#post129504"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tpsatthu</a> <a href="showthread.php-t=3301.html#post129504"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1182,7 +1182,7 @@ Thu nhập của người mẹ : 2.000.000/tháng
 	<td class="alt2" title="Replies: 14, Views: 161">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  02-02-2006 <span class="time">20:07</span><br />
- by <a href="#" rel="nofollow">SwHiEnEdP</a> <a href="showthread.php?p=113640#post113640"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">SwHiEnEdP</a> <a href="showthread.php-t=3044.html#post113640"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
