--- a/search.php-do=finduser-starteronly=1-u=2136.html
+++ b/search.php-do=finduser-starteronly=1-u=2136.html
@@ -398,7 +398,7 @@ Mai tớ mua súng nước đến bắn cho vui đây">
 	<td class="alt2" title="Replies: 42, Views: 219">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-10-2005 <span class="time">14:50</span><br />
- by <a href="#" rel="nofollow">_SinRiE_</a> <a href="showthread.php?p=83895#post83895"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">_SinRiE_</a> <a href="showthread.php-t=2859.html#post83895"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -567,7 +567,7 @@ Na ơi anh ... em">
 	<td class="alt2" title="Replies: 214, Views: 1.109">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-09-2005 <span class="time">09:37</span><br />
- by <a href="#" rel="nofollow">Wasssup</a> <a href="showthread.php?p=81199#post81199"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Wasssup</a> <a href="showthread.php-page=3-t=2753.html#post81199"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -627,7 +627,7 @@ Và không chat chit,">
 	<td class="alt2" title="Replies: 61, Views: 237">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-09-2005 <span class="time">11:15</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=75104#post75104"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2708.html#post75104"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -684,7 +684,7 @@ Và không chat chit,">
 	<td class="alt2" title="Replies: 178, Views: 650">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-08-2005 <span class="time">22:49</span><br />
- by <a href="#" rel="nofollow">X_girl</a> <a href="showthread.php?p=74175#post74175"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">X_girl</a> <a href="showthread.php-page=2-t=2689.html#post74175"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
