--- a/search.php-do=finduser-starteronly=1-u=216.html
+++ b/search.php-do=finduser-starteronly=1-u=216.html
@@ -886,7 +886,7 @@ Em có quen 1 anh bán máy vi tính xách tay, anh ý bảo dùng IBM là tốt
 	<td class="alt2" title="Replies: 23, Views: 209">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-07-2005 <span class="time">21:16</span><br />
- by <a href="#" rel="nofollow">Drdollars</a> <a href="showthread.php?p=64565#post64565"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Drdollars</a> <a href="showthread.php-t=2383.html#post64565"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1336,7 +1336,7 @@ quá nghiêm khắc, nhưng dù sao cũng cảm...">
 	<td class="alt2" title="Replies: 49, Views: 446">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  11-07-2004 <span class="time">09:48</span><br />
- by <a href="#" rel="nofollow">nguyendat</a> <a href="showthread.php?p=38974#post38974"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">nguyendat</a> <a href="showthread.php-t=1495.html#post38974"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1392,7 +1392,7 @@ Có ai thích Nelly và Black eyes peas ko? Mà ko biết có ai biết Hip hop.
 	<td class="alt2" title="Replies: 13, Views: 116">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-03-2004 <span class="time">08:11</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=26817#post26817"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=785.html#post26817"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
