--- a/search.php-do=finduser-starteronly=1-u=22.html
+++ b/search.php-do=finduser-starteronly=1-u=22.html
@@ -453,7 +453,7 @@ mà sao mình ko tìm đc chỗ gửi PM cho admin nhỉ?">
 	<td class="alt2" title="Replies: 18, Views: 443">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  29-06-2003 <span class="time">02:58</span><br />
- by <a href="#" rel="nofollow">Chobits</a> <a href="showthread.php?p=7217#post7217"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Chobits</a> <a href="showthread.php-t=404.html#post7217"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
