--- a/search.php-do=finduser-starteronly=1-u=23.html
+++ b/search.php-do=finduser-starteronly=1-u=23.html
@@ -506,7 +506,7 @@ Từ những yếu tố này sẽ tạo nên 7 nhóm người ( bất kỳ một
 	<td class="alt2" title="Replies: 29, Views: 197">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  10-09-2005 <span class="time">10:51</span><br />
- by <a href="#" rel="nofollow">kitti</a> <a href="showthread.php?p=78016#post78016"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kitti</a> <a href="showthread.php-t=2773.html#post78016"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -729,7 +729,7 @@ hồn tôi bay mất theo nàng ta.">
 	<td class="alt2" title="Replies: 44, Views: 528">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  14-04-2004 <span class="time">21:56</span><br />
- by <a href="#" rel="nofollow">oak</a> <a href="showthread.php?p=29385#post29385"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">oak</a> <a href="showthread.php-t=147.html#post29385"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1004,7 +1004,7 @@ cách làm;cho trứng gà(chỉ lấy lòng đỏ) cho cùng với sữa đánh
 	<td class="alt2" title="Replies: 22, Views: 153">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-06-2003 <span class="time">12:22</span><br />
- by <a href="#" rel="nofollow">tuthmosis</a> <a href="showthread.php?p=6554#post6554"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tuthmosis</a> <a href="showthread.php-t=285.html#post6554"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
