--- a/search.php-do=finduser-starteronly=1-u=2412.html
+++ b/search.php-do=finduser-starteronly=1-u=2412.html
@@ -555,7 +555,7 @@ Mà ko biết có chia phòng ko nhỉ?
 	<td class="alt2" title="Replies: 78, Views: 431">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-10-2005 <span class="time">21:30</span><br />
- by <a href="#" rel="nofollow">tantei</a> <a href="showthread.php?p=84115#post84115"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tantei</a> <a href="showthread.php-t=2831.html#post84115"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
