--- a/search.php-do=finduser-starteronly=1-u=2447.html
+++ b/search.php-do=finduser-starteronly=1-u=2447.html
@@ -232,7 +232,7 @@ cứ lập ra vậy">
 	<td class="alt2" title="Replies: 54, Views: 533">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  02-02-2006 <span class="time">09:35</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=113523#post113523"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=3066.html#post113523"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
