--- a/search.php-do=finduser-starteronly=1-u=2594.html
+++ b/search.php-do=finduser-starteronly=1-u=2594.html
@@ -291,7 +291,7 @@ http://www.romamor.net/stagione2006/spot/derbystoria.jpg">
 	<td class="alt2" title="Replies: 37, Views: 275">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  18-03-2006 <span class="time">15:03</span><br />
- by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php?p=127182#post127182"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php-t=3493.html#post127182"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
