--- a/search.php-do=finduser-starteronly=1-u=270.html
+++ b/search.php-do=finduser-starteronly=1-u=270.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 375, Views: 6.848">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-12-2005 <span class="time">00:21</span><br />
- by <a href="#" rel="nofollow">Pierce</a> <a href="showthread.php?p=102117#post102117"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Pierce</a> <a href="showthread.php-page=4-t=1099.html#post102117"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
