--- a/search.php-do=finduser-starteronly=1-u=285.html
+++ b/search.php-do=finduser-starteronly=1-u=285.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 63, Views: 625">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-04-2004 <span class="time">05:50</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=27958#post27958"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=1119.html#post27958"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
