--- a/search.php-do=finduser-starteronly=1-u=289.html
+++ b/search.php-do=finduser-starteronly=1-u=289.html
@@ -341,7 +341,7 @@ Bình chọn tử tế các ấy nhá &#33;&#33;&#33; :&gt;">
 	<td class="alt2" title="Replies: 38, Views: 921">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  10-05-2005 <span class="time">10:54</span><br />
- by <a href="#" rel="nofollow">hieverybody</a> <a href="showthread.php?p=57133#post57133"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">hieverybody</a> <a href="showthread.php-t=1106.html#post57133"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -450,7 +450,7 @@ Thanks a lot &#33; :D">
 	<td class="alt2" title="Replies: 11, Views: 486">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  23-04-2004 <span class="time">07:26</span><br />
- by <a href="#" rel="nofollow">talavan</a> <a href="showthread.php?p=30405#post30405"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">talavan</a> <a href="showthread.php-t=1050.html#post30405"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -504,7 +504,7 @@ Thanks a lot &#33; :D">
 	<td class="alt2" title="Replies: 17, Views: 201">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-04-2004 <span class="time">11:10</span><br />
- by <a href="#" rel="nofollow">gorilla</a> <a href="showthread.php?p=29746#post29746"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">gorilla</a> <a href="showthread.php-t=1272.html#post29746"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -558,7 +558,7 @@ Thanks a lot &#33; :D">
 	<td class="alt2" title="Replies: 42, Views: 564">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  12-04-2004 <span class="time">23:26</span><br />
- by <a href="#" rel="nofollow">kukumalu</a> <a href="showthread.php?p=29131#post29131"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kukumalu</a> <a href="showthread.php-t=1161.html#post29131"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
