--- a/search.php-do=finduser-starteronly=1-u=292.html
+++ b/search.php-do=finduser-starteronly=1-u=292.html
@@ -405,7 +405,7 @@ Wave">
 	<td class="alt2" title="Replies: 298, Views: 2.017">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-03-2006 <span class="time">16:21</span><br />
- by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php?p=127692#post127692"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php-page=3-t=1196.html#post127692"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -685,7 +685,7 @@ lúc tắm táp xong,soi gương trông cũng được đấy chứ. :D">
 	<td class="alt2" title="Replies: 73, Views: 996">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-02-2005 <span class="time">23:24</span><br />
- by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php?p=48682#post48682"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php-t=1238.html#post48682"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -796,7 +796,7 @@ lúc tắm táp xong,soi gương trông cũng được đấy chứ. :D">
 	<td class="alt2" title="Replies: 21, Views: 160">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  14-05-2004 <span class="time">07:37</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=32127#post32127"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=1486.html#post32127"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1017,7 +1017,7 @@ Nếu kô chắc mỗi lớp phải tự tổ chức rồi.">
 	<td class="alt2" title="Replies: 23, Views: 149">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  31-03-2004 <span class="time">23:41</span><br />
- by <a href="#" rel="nofollow">funpool</a> <a href="showthread.php?p=27083#post27083"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">funpool</a> <a href="showthread.php-t=1230.html#post27083"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
