--- a/search.php-do=finduser-starteronly=1-u=2947.html
+++ b/search.php-do=finduser-starteronly=1-u=2947.html
@@ -337,7 +337,7 @@
 	<td class="alt2" title="Replies: 27, Views: 596">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-04-2006 <span class="time">13:10</span><br />
- by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php?p=132675#post132675"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php-t=3619.html#post132675"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -391,7 +391,7 @@
 	<td class="alt2" title="Replies: 62, Views: 276">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  11-04-2006 <span class="time">15:04</span><br />
- by <a href="#" rel="nofollow">tpsatthu</a> <a href="showthread.php?p=131471#post131471"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tpsatthu</a> <a href="showthread.php-t=3412.html#post131471"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
