--- a/search.php-do=finduser-starteronly=1-u=2967.html
+++ b/search.php-do=finduser-starteronly=1-u=2967.html
@@ -230,7 +230,7 @@ Có lẽ đa số(tất cả) các bạn đều đã nghe về hip hop nhưng ch
 	<td class="alt2" title="Replies: 33, Views: 158">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-03-2006 <span class="time">09:37</span><br />
- by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php?p=127562#post127562"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">conan1988</a> <a href="showthread.php-t=3351.html#post127562"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
