--- a/search.php-do=finduser-starteronly=1-u=323.html
+++ b/search.php-do=finduser-starteronly=1-u=323.html
@@ -1534,7 +1534,7 @@ Trước tiên là làm phát về...">
 	<td class="alt2" title="Replies: 28, Views: 580">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  20-07-2005 <span class="time">09:54</span><br />
- by <a href="#" rel="nofollow">Drdollars</a> <a href="showthread.php?p=67142#post67142"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Drdollars</a> <a href="showthread.php-t=2284.html#post67142"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
