--- a/search.php-do=finduser-starteronly=1-u=327.html
+++ b/search.php-do=finduser-starteronly=1-u=327.html
@@ -1095,7 +1095,7 @@ em sẽ...">
 	<td class="alt2" title="Replies: 29, Views: 219">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  14-09-2004 <span class="time">03:18</span><br />
- by <a href="#" rel="nofollow">tuanchosoi</a> <a href="showthread.php?p=39152#post39152"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tuanchosoi</a> <a href="showthread.php-t=1677.html#post39152"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1258,7 +1258,7 @@ Nhưng điều quan trọng ko phải đi đâu mà là đi với ai phải ko n
 	<td class="alt2" title="Replies: 17, Views: 175">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  16-04-2004 <span class="time">23:42</span><br />
- by <a href="#" rel="nofollow">kukiheobi</a> <a href="showthread.php?p=29631#post29631"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">kukiheobi</a> <a href="showthread.php-t=1370.html#post29631"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
