--- a/search.php-do=finduser-starteronly=1-u=345.html
+++ b/search.php-do=finduser-starteronly=1-u=345.html
@@ -447,7 +447,7 @@ Mọi người nghe xong thì cho ý kiến nhé.....Rất mong...">
 	<td class="alt2" title="Replies: 32, Views: 473">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-06-2004 <span class="time">09:26</span><br />
- by <a href="#" rel="nofollow">Kabi</a> <a href="showthread.php?p=34447#post34447"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Kabi</a> <a href="showthread.php-t=1277.html#post34447"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
