--- a/search.php-do=finduser-starteronly=1-u=362.html
+++ b/search.php-do=finduser-starteronly=1-u=362.html
@@ -391,7 +391,7 @@
 	<td class="alt2" title="Replies: 14, Views: 113">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  20-03-2004 <span class="time">08:39</span><br />
- by <a href="#" rel="nofollow">scorpionkl</a> <a href="showthread.php?p=25034#post25034"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">scorpionkl</a> <a href="showthread.php-t=1082.html#post25034"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -447,7 +447,7 @@
 	<td class="alt2" title="Replies: 24, Views: 202">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  16-03-2004 <span class="time">05:24</span><br />
- by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php?p=24555#post24555"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php-t=1129.html#post24555"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
