--- a/search.php-do=finduser-starteronly=1-u=363.html
+++ b/search.php-do=finduser-starteronly=1-u=363.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 11, Views: 76">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  23-06-2004 <span class="time">03:30</span><br />
- by <a href="#" rel="nofollow">scorpionkl</a> <a href="showthread.php?p=36643#post36643"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">scorpionkl</a> <a href="showthread.php-t=1705.html#post36643"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
