--- a/search.php-do=finduser-starteronly=1-u=382.html
+++ b/search.php-do=finduser-starteronly=1-u=382.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 30, Views: 339">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  09-05-2004 <span class="time">04:43</span><br />
- by <a href="#" rel="nofollow">*Rose7love*</a> <a href="showthread.php?p=31460#post31460"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">*Rose7love*</a> <a href="showthread.php-t=1124.html#post31460"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
