--- a/search.php-do=finduser-starteronly=1-u=408.html
+++ b/search.php-do=finduser-starteronly=1-u=408.html
@@ -397,7 +397,7 @@ người ta đã trả lời &quot;hanoiwitch: doi voi vietnamese students thi d
 	<td class="alt2" title="Replies: 25, Views: 255">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  10-07-2004 <span class="time">04:14</span><br />
- by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php?p=38785#post38785"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php-t=1725.html#post38785"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
