--- a/search.php-do=finduser-starteronly=1-u=4157.html
+++ b/search.php-do=finduser-starteronly=1-u=4157.html
@@ -730,7 +730,7 @@ chết cười cái jọng của thằng quay phim:)):))">
 	<td class="alt2" title="Replies: 14, Views: 189">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  15-01-2008 <span class="time">07:48</span><br />
- by <a href="#" rel="nofollow">serendipity</a> <a href="showthread.php?p=201115#post201115"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">serendipity</a> <a href="showthread.php-t=4860.html#post201115"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
