--- a/search.php-do=finduser-starteronly=1-u=418.html
+++ b/search.php-do=finduser-starteronly=1-u=418.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 15, Views: 189">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-08-2005 <span class="time">13:34</span><br />
- by <a href="#" rel="nofollow">khang_qt</a> <a href="showthread.php?p=69146#post69146"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">khang_qt</a> <a href="showthread.php-t=1300.html#post69146"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
