--- a/search.php-do=finduser-starteronly=1-u=4292.html
+++ b/search.php-do=finduser-starteronly=1-u=4292.html
@@ -238,7 +238,7 @@ ngoài...">
 	<td class="alt2" title="Replies: 1, Views: 113">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-05-2008 <span class="time">08:29</span><br />
- by <a href="#" rel="nofollow">tuvw021</a> <a href="showthread.php?p=221357#post221357"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tuvw021</a> <a href="showthread.php-t=4910.html#post221357"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
