--- a/search.php-do=finduser-starteronly=1-u=43.html
+++ b/search.php-do=finduser-starteronly=1-u=43.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 29, Views: 672">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-02-2005 <span class="time">01:24</span><br />
- by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php?p=48990#post48990"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">jennifer</a> <a href="showthread.php-t=1946.html#post48990"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -500,7 +500,7 @@ Nhời đầu tiên là mong cả làng cả xóm thông cảm cho em :&quot;&gt
 	<td class="alt2" title="Replies: 12, Views: 182">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  16-01-2004 <span class="time">03:09</span><br />
- by <a href="#" rel="nofollow">pink</a> <a href="showthread.php?p=19471#post19471"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">pink</a> <a href="showthread.php-t=1013.html#post19471"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
