--- a/search.php-do=finduser-starteronly=1-u=441.html
+++ b/search.php-do=finduser-starteronly=1-u=441.html
@@ -232,7 +232,7 @@ DR_DRE: xuống dòng bừa bãi + lập topic với bài mở đầu rẻ tiề
 	<td class="alt2" title="Replies: 16, Views: 173">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  22-04-2004 <span class="time">06:31</span><br />
- by <a href="#" rel="nofollow">panda</a> <a href="showthread.php?p=30312#post30312"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">panda</a> <a href="showthread.php-t=1271.html#post30312"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
