--- a/search.php-do=finduser-starteronly=1-u=462.html
+++ b/search.php-do=finduser-starteronly=1-u=462.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 58, Views: 679">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  22-05-2004 <span class="time">01:04</span><br />
- by <a href="#" rel="nofollow">Nhat_RSX</a> <a href="showthread.php?p=33010#post33010"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Nhat_RSX</a> <a href="showthread.php-t=1359.html#post33010"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -338,7 +338,7 @@
 	<td class="alt2" title="Replies: 37, Views: 253">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-05-2004 <span class="time">20:53</span><br />
- by <a href="#" rel="nofollow">1_No_Fear_1</a> <a href="showthread.php?p=32496#post32496"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">1_No_Fear_1</a> <a href="showthread.php-t=1358.html#post32496"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
