--- a/search.php-do=finduser-starteronly=1-u=49.html
+++ b/search.php-do=finduser-starteronly=1-u=49.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 11, Views: 320">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-10-2005 <span class="time">03:44</span><br />
- by <a href="#" rel="nofollow">tuan</a> <a href="showthread.php?p=83071#post83071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tuan</a> <a href="showthread.php-t=1235.html#post83071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
