--- a/search.php-do=finduser-starteronly=1-u=50.html
+++ b/search.php-do=finduser-starteronly=1-u=50.html
@@ -610,7 +610,7 @@ Miss hỏi này, nếu yêu 1 người thật sự, những đứa khác dù hơ
 	<td class="alt2" title="Replies: 18, Views: 122">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-04-2004 <span class="time">02:22</span><br />
- by <a href="#" rel="nofollow">moonlight</a> <a href="showthread.php?p=27792#post27792"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">moonlight</a> <a href="showthread.php-t=345.html#post27792"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -718,7 +718,7 @@ Miss hỏi này, nếu yêu 1 người thật sự, những đứa khác dù hơ
 	<td class="alt2" title="Replies: 63, Views: 614">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  07-03-2004 <span class="time">05:17</span><br />
- by <a href="#" rel="nofollow">KCnoodles</a> <a href="showthread.php?p=23246#post23246"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">KCnoodles</a> <a href="showthread.php-t=408.html#post23246"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -772,7 +772,7 @@ Miss hỏi này, nếu yêu 1 người thật sự, những đứa khác dù hơ
 	<td class="alt2" title="Replies: 33, Views: 277">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-03-2004 <span class="time">21:56</span><br />
- by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php?p=22791#post22791"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php-t=1068.html#post22791"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -826,7 +826,7 @@ Miss hỏi này, nếu yêu 1 người thật sự, những đứa khác dù hơ
 	<td class="alt2" title="Replies: 111, Views: 749">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  16-02-2004 <span class="time">07:12</span><br />
- by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php?p=21076#post21076"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php-page=2-t=1028.html#post21076"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
