--- a/search.php-do=finduser-starteronly=1-u=532.html
+++ b/search.php-do=finduser-starteronly=1-u=532.html
@@ -288,7 +288,7 @@
 	<td class="alt2" title="Replies: 19, Views: 222">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-03-2005 <span class="time">18:06</span><br />
- by <a href="#" rel="nofollow">brutal_head</a> <a href="showthread.php?p=51481#post51481"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">brutal_head</a> <a href="showthread.php-t=1696.html#post51481"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -512,7 +512,7 @@ giải nhất : lock nick 1 tuần
 	<td class="alt2" title="Replies: 20, Views: 107">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-05-2004 <span class="time">00:07</span><br />
- by <a href="#" rel="nofollow">lazy_cat</a> <a href="showthread.php?p=30856#post30856"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">lazy_cat</a> <a href="showthread.php-t=1380.html#post30856"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
