--- a/search.php-do=finduser-starteronly=1-u=552.html
+++ b/search.php-do=finduser-starteronly=1-u=552.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 191, Views: 780">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  19-10-2005 <span class="time">17:33</span><br />
- by <a href="#" rel="nofollow">loiloan</a> <a href="showthread.php?p=85484#post85484"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loiloan</a> <a href="showthread.php-page=2-t=2600.html#post85484"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
