--- a/search.php-do=finduser-starteronly=1-u=56.html
+++ b/search.php-do=finduser-starteronly=1-u=56.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 15, Views: 223">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-06-2004 <span class="time">06:45</span><br />
- by <a href="#" rel="nofollow">*Rose7love*</a> <a href="showthread.php?p=35006#post35006"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">*Rose7love*</a> <a href="showthread.php-t=1631.html#post35006"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -445,7 +445,7 @@
 	<td class="alt2" title="Replies: 23, Views: 420">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-11-2003 <span class="time">21:43</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=16017#post16017"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=847.html#post16017"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -553,7 +553,7 @@
 	<td class="alt2" title="Replies: 29, Views: 264">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  27-09-2003 <span class="time">10:16</span><br />
- by <a href="#" rel="nofollow">baxu</a> <a href="showthread.php?p=12003#post12003"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">baxu</a> <a href="showthread.php-t=457.html#post12003"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -715,7 +715,7 @@
 	<td class="alt2" title="Replies: 28, Views: 437">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-07-2003 <span class="time">17:15</span><br />
- by <a href="#" rel="nofollow">dnq</a> <a href="showthread.php?p=8852#post8852"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">dnq</a> <a href="showthread.php-t=421.html#post8852"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
