--- a/search.php-do=finduser-starteronly=1-u=629.html
+++ b/search.php-do=finduser-starteronly=1-u=629.html
@@ -230,7 +230,7 @@ Toi thuc su thay hoc tro Kl bay gio...dang yeu va &quot;de ghet &quot; qua&#39;.
 	<td class="alt2" title="Replies: 60, Views: 879">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-09-2005 <span class="time">10:00</span><br />
- by <a href="#" rel="nofollow">sportVIP</a> <a href="showthread.php?p=75466#post75466"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">sportVIP</a> <a href="showthread.php-t=1427.html#post75466"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
