--- a/search.php-do=finduser-starteronly=1-u=69.html
+++ b/search.php-do=finduser-starteronly=1-u=69.html
@@ -447,7 +447,7 @@
 	<td class="alt2" title="Replies: 18, Views: 139">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-04-2004 <span class="time">23:36</span><br />
- by <a href="#" rel="nofollow">funpool</a> <a href="showthread.php?p=27262#post27262"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">funpool</a> <a href="showthread.php-t=1255.html#post27262"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
