--- a/search.php-do=finduser-starteronly=1-u=727.html
+++ b/search.php-do=finduser-starteronly=1-u=727.html
@@ -229,7 +229,7 @@
 	<td class="alt2" title="Replies: 24, Views: 535">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  28-09-2004 <span class="time">13:57</span><br />
- by <a href="#" rel="nofollow">burself</a> <a href="showthread.php?p=40000#post40000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">burself</a> <a href="showthread.php-t=1546.html#post40000"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -345,7 +345,7 @@ Nhưng trước người tôi...">
 	<td class="alt2" title="Replies: 17, Views: 295">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-05-2004 <span class="time">06:32</span><br />
- by <a href="#" rel="nofollow">thu7codon</a> <a href="showthread.php?p=34048#post34048"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">thu7codon</a> <a href="showthread.php-t=1528.html#post34048"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
