--- a/search.php-do=finduser-starteronly=1-u=73.html
+++ b/search.php-do=finduser-starteronly=1-u=73.html
@@ -230,7 +230,7 @@ Kiểu đầu đẹp phải đáp ứng những yếu tố...">
 	<td class="alt2" title="Replies: 52, Views: 682">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  23-05-2004 <span class="time">05:42</span><br />
- by <a href="#" rel="nofollow">Kamui</a> <a href="showthread.php?p=33198#post33198"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Kamui</a> <a href="showthread.php-t=1379.html#post33198"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -284,7 +284,7 @@ Kiểu đầu đẹp phải đáp ứng những yếu tố...">
 	<td class="alt2" title="Replies: 37, Views: 466">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-03-2004 <span class="time">00:38</span><br />
- by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php?p=23365#post23365"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php-t=1140.html#post23365"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
