--- a/search.php-do=finduser-starteronly=1-u=745.html
+++ b/search.php-do=finduser-starteronly=1-u=745.html
@@ -623,7 +623,7 @@ japp stam(lazio)-&gt;ac milan">
 	<td class="alt2" title="Replies: 38, Views: 239">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  11-07-2004 <span class="time">21:00</span><br />
- by <a href="#" rel="nofollow">scorpionkl</a> <a href="showthread.php?p=38996#post38996"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">scorpionkl</a> <a href="showthread.php-t=1694.html#post38996"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
