--- a/search.php-do=finduser-starteronly=1-u=7856.html
+++ b/search.php-do=finduser-starteronly=1-u=7856.html
@@ -237,7 +237,7 @@ Mail: ninhnt@vsao.vn">
 	<td class="alt2" title="Replies: 1, Views: 91">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-03-2011 <span class="time">10:06</span><br />
- by <a href="#" rel="nofollow">Unregistered</a> <a href="showthread.php?p=372180#post372180"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Unregistered</a> <a href="showthread.php-t=11293.html#post372180"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
