--- a/search.php-do=finduser-starteronly=1-u=79.html
+++ b/search.php-do=finduser-starteronly=1-u=79.html
@@ -504,7 +504,7 @@ các bác có cách nào học hiệu quả ko?sắp thi rùi hix hix">
 	<td class="alt2" title="Replies: 25, Views: 335">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-05-2005 <span class="time">20:01</span><br />
- by <a href="#" rel="nofollow">con_ghe</a> <a href="showthread.php?p=56648#post56648"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">con_ghe</a> <a href="showthread.php-t=1761.html#post56648"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1388,7 +1388,7 @@ Phong cách ăn uống của người Hà Nội có những nét khác biệt, t
 	<td class="alt2" title="Replies: 14, Views: 164">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-04-2004 <span class="time">00:47</span><br />
- by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php?p=27112#post27112"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loveyou</a> <a href="showthread.php-t=1249.html#post27112"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1502,7 +1502,7 @@ Vậy mọi...">
 	<td class="alt2" title="Replies: 20, Views: 184">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  12-03-2004 <span class="time">01:53</span><br />
- by <a href="#" rel="nofollow">virusfetinh</a> <a href="showthread.php?p=23997#post23997"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">virusfetinh</a> <a href="showthread.php-t=1018.html#post23997"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
