--- a/search.php-do=finduser-starteronly=1-u=84.html
+++ b/search.php-do=finduser-starteronly=1-u=84.html
@@ -403,7 +403,7 @@ ttpl nghĩ chúng ta có thể cùng sáng tác bài hát chung==&gt;truyền th
 	<td class="alt2" title="Replies: 23, Views: 232">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  12-03-2004 <span class="time">03:05</span><br />
- by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php?p=24026#post24026"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php-t=1092.html#post24026"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -517,7 +517,7 @@ Is this meant to...">
 	<td class="alt2" title="Replies: 37, Views: 245">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  02-12-2003 <span class="time">22:11</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=16367#post16367"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=859.html#post16367"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
