--- a/search.php-do=finduser-starteronly=1-u=919.html
+++ b/search.php-do=finduser-starteronly=1-u=919.html
@@ -401,7 +401,7 @@ Boi doi voi em tinh yeu la tat ca
 	<td class="alt2" title="Replies: 41, Views: 333">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  23-09-2004 <span class="time">17:11</span><br />
- by <a href="#" rel="nofollow">sweetmemory</a> <a href="showthread.php?p=39685#post39685"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">sweetmemory</a> <a href="showthread.php-t=1727.html#post39685"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -513,7 +513,7 @@ Tình yêu là một thứ tình cảm thật...">
 	<td class="alt2" title="Replies: 26, Views: 187">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-07-2004 <span class="time">04:31</span><br />
- by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php?p=38161#post38161"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">crazy_in_WC</a> <a href="showthread.php-t=1739.html#post38161"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
