--- a/search.php-do=finduser-starteronly=1-u=95.html
+++ b/search.php-do=finduser-starteronly=1-u=95.html
@@ -399,7 +399,7 @@
 	<td class="alt2" title="Replies: 110, Views: 1.183">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  10-03-2005 <span class="time">10:50</span><br />
- by <a href="#" rel="nofollow">loveyou1210</a> <a href="showthread.php?p=52249#post52249"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">loveyou1210</a> <a href="showthread.php-page=2-t=2280.html#post52249"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
