--- a/search.php-do=finduser-starteronly=1-u=98.html
+++ b/search.php-do=finduser-starteronly=1-u=98.html
@@ -512,7 +512,7 @@ http://www.designerkidsbedding.com/assets/images/heaventwn.jpg">
 	<td class="alt2" title="Replies: 29, Views: 278">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  21-10-2003 <span class="time">17:33</span><br />
- by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php?p=13285#post13285"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php-t=633.html#post13285"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
