--- a/search.php-do=finduser-starteronly=1-u=982.html
+++ b/search.php-do=finduser-starteronly=1-u=982.html
@@ -445,7 +445,7 @@
 	<td class="alt2" title="Replies: 11, Views: 134">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  18-10-2004 <span class="time">14:47</span><br />
- by <a href="#" rel="nofollow">starboy</a> <a href="showthread.php?p=41490#post41490"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">starboy</a> <a href="showthread.php-t=1806.html#post41490"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
