--- a/showthread.php-page=2-t=434.html
+++ b/showthread.php-page=2-t=434.html
@@ -9,7 +9,7 @@
 
 
 <!-- CSS Stylesheet -->
-<link rel="stylesheet" type="text/css" href="/styles/klstyle/friendship.css" id="vbulletin_css" />
+<link rel="stylesheet" type="text/css" href="styles/klstyle/friendship.css" id="vbulletin_css" />
 
 <!-- / CSS Stylesheet -->
 
@@ -47,12 +47,12 @@
  
 
  
- <td class="vbmenu2_control"><a href="/memberlist.php">Members List</a></td>
+ <td class="vbmenu2_control"><a href="memberlist.php.html">Members List</a></td>
  
 <!-- Our Class START #navbar item -->
 
 	<td id="navbar_ourclass" class="vbmenu2_control">
- <a href="forumdisplay.php?f=66" accesskey="o" rel="nofollow">Our Class</a>
+ <a href="forumdisplay.php-f=66.html" accesskey="o" rel="nofollow">Our Class</a>
  
 	</td>
 
@@ -99,16 +99,16 @@
  <tr valign="bottom">
  <td><a href="#" onclick="history.back(1); return false;"><img src="styles/klstyle/misc/navbits_start.gif" alt="Go Back" border="0" /></a></td>
  <td>&nbsp;</td>
- <td width="100%"><span class="navbar"><a href="index.php" accesskey="1">KLNetBB</a></span> 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=6">DIỄN ĐÀN CÁC THẾ HỆ</a></span>
+ <td width="100%"><span class="navbar"><a href="index.html" accesskey="1">KLNetBB</a></span> 
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=6.html">DIỄN ĐÀN CÁC THẾ HỆ</a></span>
 
 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=12">Giờ Ra Chơi</a></span>
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=12.html">Giờ Ra Chơi</a></span>
 
 </td>
  </tr>
  <tr>
- <td class="navbar" style="font-size:10pt; padding-top:1px" colspan="3"><a href="/showthread.php?t=434&amp;page=2"><img class="inlineimg" src="styles/klstyle/misc/navbits_finallink.gif" alt="Reload this Page" border="0" /></a> <strong>
+ <td class="navbar" style="font-size:10pt; padding-top:1px" colspan="3"><a href="showthread.php-page=2-t=434.html"><img class="inlineimg" src="styles/klstyle/misc/navbits_finallink.gif" alt="Reload this Page" border="0" /></a> <strong>
 	FC ACM !
 
 </strong></td>
@@ -152,8 +152,8 @@
 <tr>
 	<td class="vbmenu_control" style="font-weight:normal">Page 2 of 2</td>
 	
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=434" title="Prev Page - Results 1 to 100 of 101">&lt;</a></td>
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=434" title="Show results 1 to 100 of 101">1</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 101 to 101 of 101"><strong>2</strong></span></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-t=434.html" title="Prev Page - Results 1 to 100 of 101">&lt;</a></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-t=434.html" title="Show results 1 to 100 of 101">1</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 101 to 101 of 101"><strong>2</strong></span></td>
  
 	
 	
@@ -242,7 +242,7 @@
  <!-- kBank START #postbit Info -->
  
  KL$:
- <a href="kbank.php?to=scorpionkl" title="Donate">0.00</a>
+ <a href="#" title="Donate">0.00</a>
  <br/>
  
  
@@ -281,7 +281,7 @@
 	</tr>
 	</table>
 </div> 5 chiếc cúp C1,16 Scud thế từ trước đến giờ Milan vẫn là đội bóng baby ah?<br />
- Tầm hiểu biết của Rossoneri chỉ đến thế thôi sao? <img src="/images/smilies/y/4.gif" border="0" alt="" title="smiley4" class="inlineimg" /> ....Cần gì phải sa thải 2 người này,còn Berlusconi thì Milan còn vô địch hehe khỏi lo đi <img src="/images/smilies/y/16.gif" border="0" alt="" title="smiley16" class="inlineimg" /></div>
+ Tầm hiểu biết của Rossoneri chỉ đến thế thôi sao? <img src="images/smilies/y/4.gif" border="0" alt="" title="smiley4" class="inlineimg" /> ....Cần gì phải sa thải 2 người này,còn Berlusconi thì Milan còn vô địch hehe khỏi lo đi <img src="images/smilies/y/16.gif" border="0" alt="" title="smiley16" class="inlineimg" /></div>
  <!-- / message -->
 	
  
@@ -344,8 +344,8 @@
 <tr>
 	<td class="vbmenu_control" style="font-weight:normal">Page 2 of 2</td>
 	
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=434" title="Prev Page - Results 1 to 100 of 101">&lt;</a></td>
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=434" title="Show results 1 to 100 of 101">1</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 101 to 101 of 101"><strong>2</strong></span></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-t=434.html" title="Prev Page - Results 1 to 100 of 101">&lt;</a></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-t=434.html" title="Show results 1 to 100 of 101">1</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 101 to 101 of 101"><strong>2</strong></span></td>
  
 	
 	
@@ -362,7 +362,7 @@
 <br />
 <div class="smallfont" align="center"><u>KLNetBB</u> - Member of Kimlien Network<br />
 Copyright &copy; 2002-2009 by <u>dcuongtran</u><br />
-Skin designed by Kusanagi - Banner designed by <a href="/member.php?u=4033">FunkyJan</a></div>
+Skin designed by Kusanagi - Banner designed by <a href="member.php-u=4033.html">FunkyJan</a></div>
 
 
 
