--- a/showthread.php-page=3-t=2925.html
+++ b/showthread.php-page=3-t=2925.html
@@ -9,7 +9,7 @@
 
 
 <!-- CSS Stylesheet -->
-<link rel="stylesheet" type="text/css" href="/styles/klstyle/friendship.css" id="vbulletin_css" />
+<link rel="stylesheet" type="text/css" href="styles/klstyle/friendship.css" id="vbulletin_css" />
 
 <!-- / CSS Stylesheet -->
 
@@ -47,12 +47,12 @@
  
 
  
- <td class="vbmenu2_control"><a href="/memberlist.php">Members List</a></td>
+ <td class="vbmenu2_control"><a href="memberlist.php.html">Members List</a></td>
  
 <!-- Our Class START #navbar item -->
 
 	<td id="navbar_ourclass" class="vbmenu2_control">
- <a href="forumdisplay.php?f=66" accesskey="o" rel="nofollow">Our Class</a>
+ <a href="forumdisplay.php-f=66.html" accesskey="o" rel="nofollow">Our Class</a>
  
 	</td>
 
@@ -99,16 +99,16 @@
  <tr valign="bottom">
  <td><a href="#" onclick="history.back(1); return false;"><img src="styles/klstyle/misc/navbits_start.gif" alt="Go Back" border="0" /></a></td>
  <td>&nbsp;</td>
- <td width="100%"><span class="navbar"><a href="index.php" accesskey="1">KLNetBB</a></span> 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=4">DIỄN ĐÀN CÁC LĨNH VỰC</a></span>
+ <td width="100%"><span class="navbar"><a href="index.html" accesskey="1">KLNetBB</a></span> 
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=4.html">DIỄN ĐÀN CÁC LĨNH VỰC</a></span>
 
 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=9">Góc học tập</a></span>
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=9.html">Góc học tập</a></span>
 
 </td>
  </tr>
  <tr>
- <td class="navbar" style="font-size:10pt; padding-top:1px" colspan="3"><a href="/showthread.php?t=2925&amp;page=3"><img class="inlineimg" src="styles/klstyle/misc/navbits_finallink.gif" alt="Reload this Page" border="0" /></a> <strong>
+ <td class="navbar" style="font-size:10pt; padding-top:1px" colspan="3"><a href="showthread.php-page=3-t=2925.html"><img class="inlineimg" src="styles/klstyle/misc/navbits_finallink.gif" alt="Reload this Page" border="0" /></a> <strong>
 	khối A ạ......
 
 </strong></td>
@@ -152,8 +152,8 @@
 <tr>
 	<td class="vbmenu_control" style="font-weight:normal">Page 3 of 3</td>
 	
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=2925&amp;page=2" title="Prev Page - Results 101 to 200 of 201">&lt;</a></td>
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=2925" title="Show results 1 to 100 of 201">1</a></td><td class="alt1"><a class="smallfont" href="showthread.php?t=2925&amp;page=2" title="Show results 101 to 200 of 201">2</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 201 to 201 of 201"><strong>3</strong></span></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-page=2-t=2925.html" title="Prev Page - Results 101 to 200 of 201">&lt;</a></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-t=2925.html" title="Show results 1 to 100 of 201">1</a></td><td class="alt1"><a class="smallfont" href="showthread.php-page=2-t=2925.html" title="Show results 101 to 200 of 201">2</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 201 to 201 of 201"><strong>3</strong></span></td>
  
 	
 	
@@ -223,7 +223,7 @@
  
  <div id="postmenu_186360">
  
- <a class="bigusername" href="member.php?u=3403"><font color="gray">kim_lee_hn</font></a>
+ <a class="bigusername" href="member.php-u=3403.html"><font color="gray">kim_lee_hn</font></a>
  
  
  
@@ -243,7 +243,7 @@
  <!-- kBank START #postbit Info -->
  
  KL$:
- <a href="kbank.php?to=kim_lee_hn" title="Donate">0</a>
+ <a href="#" title="Donate">0</a>
  <br/>
  
  
@@ -269,7 +269,7 @@
 
  
  <!-- message -->
- <div id="post_message_186360">A8 không thay giáo viên văn vì nghỉ đẻ, cô Nụ cơ mà, cô hơi bị...rồi nhá <img src="/images/smilies/y/4.gif" border="0" alt="" title="smiley4" class="inlineimg" />..Chẳng biết sao lại thay, thấy bảo cô nghỉ hưu, mà thay ai đấy, mới vào trường mình dạy</div>
+ <div id="post_message_186360">A8 không thay giáo viên văn vì nghỉ đẻ, cô Nụ cơ mà, cô hơi bị...rồi nhá <img src="images/smilies/y/4.gif" border="0" alt="" title="smiley4" class="inlineimg" />..Chẳng biết sao lại thay, thấy bảo cô nghỉ hưu, mà thay ai đấy, mới vào trường mình dạy</div>
  <!-- / message -->
 	
  
@@ -334,8 +334,8 @@
 <tr>
 	<td class="vbmenu_control" style="font-weight:normal">Page 3 of 3</td>
 	
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=2925&amp;page=2" title="Prev Page - Results 101 to 200 of 201">&lt;</a></td>
-	<td class="alt1"><a class="smallfont" href="showthread.php?t=2925" title="Show results 1 to 100 of 201">1</a></td><td class="alt1"><a class="smallfont" href="showthread.php?t=2925&amp;page=2" title="Show results 101 to 200 of 201">2</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 201 to 201 of 201"><strong>3</strong></span></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-page=2-t=2925.html" title="Prev Page - Results 101 to 200 of 201">&lt;</a></td>
+	<td class="alt1"><a class="smallfont" href="showthread.php-t=2925.html" title="Show results 1 to 100 of 201">1</a></td><td class="alt1"><a class="smallfont" href="showthread.php-page=2-t=2925.html" title="Show results 101 to 200 of 201">2</a></td>	<td class="alt2"><span class="smallfont" title="Showing results 201 to 201 of 201"><strong>3</strong></span></td>
  
 	
 	
@@ -352,7 +352,7 @@
 <br />
 <div class="smallfont" align="center"><u>KLNetBB</u> - Member of Kimlien Network<br />
 Copyright &copy; 2002-2009 by <u>dcuongtran</u><br />
-Skin designed by Kusanagi - Banner designed by <a href="/member.php?u=4033">FunkyJan</a></div>
+Skin designed by Kusanagi - Banner designed by <a href="member.php-u=4033.html">FunkyJan</a></div>
 
 
 
