--- a/showthread.php-t=11990.html
+++ b/showthread.php-t=11990.html
@@ -9,7 +9,7 @@
 
 
 <!-- CSS Stylesheet -->
-<link rel="stylesheet" type="text/css" href="/styles/klstyle/friendship.css" id="vbulletin_css" />
+<link rel="stylesheet" type="text/css" href="styles/klstyle/friendship.css" id="vbulletin_css" />
 
 <!-- / CSS Stylesheet -->
 
@@ -47,12 +47,12 @@
  
 
  
- <td class="vbmenu2_control"><a href="/memberlist.php">Members List</a></td>
+ <td class="vbmenu2_control"><a href="memberlist.php.html">Members List</a></td>
  
 <!-- Our Class START #navbar item -->
 
 	<td id="navbar_ourclass" class="vbmenu2_control">
- <a href="forumdisplay.php?f=66" accesskey="o" rel="nofollow">Our Class</a>
+ <a href="forumdisplay.php-f=66.html" accesskey="o" rel="nofollow">Our Class</a>
  
 	</td>
 
@@ -99,19 +99,19 @@
  <tr valign="bottom">
  <td><a href="#" onclick="history.back(1); return false;"><img src="styles/klstyle/misc/navbits_start.gif" alt="Go Back" border="0" /></a></td>
  <td>&nbsp;</td>
- <td width="100%"><span class="navbar"><a href="index.php" accesskey="1">KLNetBB</a></span> 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=4">DIỄN ĐÀN CÁC LĨNH VỰC</a></span>
+ <td width="100%"><span class="navbar"><a href="index.html" accesskey="1">KLNetBB</a></span> 
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=4.html">DIỄN ĐÀN CÁC LĨNH VỰC</a></span>
 
 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=62">Kimlien Clubs</a></span>
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=62.html">Kimlien Clubs</a></span>
 
 
-	<span class="navbar">&gt; <a href="forumdisplay.php?f=59">KEC - Kimlien English Club</a></span>
+	<span class="navbar">&gt; <a href="forumdisplay.php-f=59.html">KEC - Kimlien English Club</a></span>
 
 </td>
  </tr>
  <tr>
- <td class="navbar" style="font-size:10pt; padding-top:1px" colspan="3"><a href="/showthread.php?t=11990"><img class="inlineimg" src="styles/klstyle/misc/navbits_finallink.gif" alt="Reload this Page" border="0" /></a> <strong>
+ <td class="navbar" style="font-size:10pt; padding-top:1px" colspan="3"><a href="showthread.php-t=11990.html"><img class="inlineimg" src="styles/klstyle/misc/navbits_finallink.gif" alt="Reload this Page" border="0" /></a> <strong>
 	Học speaking đi cả nhà ơi!!!
 
 </strong></td>
@@ -221,10 +221,10 @@
  
  <div id="postmenu_372640">
  
- <a class="bigusername" href="member.php?u=8457">OxSid</a>
+ <a class="bigusername" href="member.php-u=8457.html">OxSid</a>
  
  
- <img src="/cuong/Female.gif" alt="Female"/>
+ <img src="cuong/Female.gif" alt="Female"/>
  </div>
 <br/>
  <div class="smallfont"><img src="cuong/star.gif" alt="" border="" /></div>
@@ -241,7 +241,7 @@
  <!-- kBank START #postbit Info -->
  
  KL$:
- <a href="kbank.php?to=OxSid" title="Donate">44</a>
+ <a href="#" title="Donate">44</a>
  <br/>
  
  
@@ -368,7 +368,7 @@ Hotline 0906 032 900 Email : <a href="mailto:ngocleftu@gmail.com">ngocleftu@gmai
 <br />
 <div class="smallfont" align="center"><u>KLNetBB</u> - Member of Kimlien Network<br />
 Copyright &copy; 2002-2009 by <u>dcuongtran</u><br />
-Skin designed by Kusanagi - Banner designed by <a href="/member.php?u=4033">FunkyJan</a></div>
+Skin designed by Kusanagi - Banner designed by <a href="member.php-u=4033.html">FunkyJan</a></div>
 
 
 
