--- a/showthread.php-t=5026.html
+++ b/showthread.php-t=5026.html
@@ -309,7 +309,7 @@ P.s:ngoài ra ,nhân dịp khai trương ,chúng tôi sẽ tung ra mặt hàng <
 	</table>
 </div>Sản phẩm được phát hành bởi <font color="blue">ngua_van</font> và <font color="blue">sword</font><br />
 <br />
-Kick vào <a href="#" target="_blank"> <font color="orange"> đây </font></a>để mua sản phẩm của chúng tôi <img src="/images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" />. <br />
+Kick vào <a href="#" target="_blank"> <font color="orange"> đây </font></a>để mua sản phẩm của chúng tôi <img src="images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" />. <br />
 <br />
 <font color="red">*Hướng dẫn sử dụng</font> :bạn kick vào Kbank---&gt;Kshop---&gt; mua hàng <img src="images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" /> sau khi mua hàng ,bạn vào My Items ---&gt;chọn Inable Item (use item với mặt hàng avartar)---&gt; rồi chọn nickname +title + màu mà bạn muốn đổi <img src="images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" /> have fun <img src="images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" />.Expire-Date là ngày mà sản phẩm của bạn sẽ hết hạn sử dụng <img src="images/smilies/y/3.gif" border="0" alt="" title="smiley3" class="inlineimg" /> khi đấy bạn hãy tiếp tục mua sp nhé <img src="images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" /> chúng tôi sẽ giảm giá cho các lần mua kế tiếp <img src="images/smilies/y/8.gif" border="0" alt="" title="smiley8" class="inlineimg" />.</div>
  <!-- / message -->
