--- a/forumdisplay.php-f=10.html
+++ b/forumdisplay.php-f=10.html
@@ -21522,7 +21522,7 @@ ngoài ra còn có cái fá validate tool của hội Microsoft :D Ai...">
 	<td class="alt2" title="Replies: 11, Views: 320">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  03-10-2005 <span class="time">03:44</span><br />
- by <a href="#" rel="nofollow">tuan</a> <a href="showthread.php?p=83071#post83071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tuan</a> <a href="showthread.php-t=1235.html#post83071"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -21836,7 +21836,7 @@ Em bị mất cái bộ cài nên không đọc được cái hướng dẫn&#33
 	<td class="alt2" title="Replies: 18, Views: 123">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  12-09-2005 <span class="time">09:49</span><br />
- by <a href="#" rel="nofollow">sin</a> <a href="showthread.php?p=78891#post78891"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">sin</a> <a href="showthread.php-t=2821.html#post78891"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -22699,7 +22699,7 @@ Hãy nhấn chuột vào đây nhé:...">
 	<td class="alt2" title="Replies: 26, Views: 1.711">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  08-06-2004 <span class="time">08:53</span><br />
- by <a href="#" rel="nofollow">chazy_chaz</a> <a href="showthread.php?p=35018#post35018"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">chazy_chaz</a> <a href="showthread.php-t=907.html#post35018"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -22751,7 +22751,7 @@ Hãy nhấn chuột vào đây nhé:...">
 	<td class="alt2" title="Replies: 14, Views: 313">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  20-05-2004 <span class="time">21:52</span><br />
- by <a href="#" rel="nofollow">wyn</a> <a href="showthread.php?p=32856#post32856"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">wyn</a> <a href="showthread.php-t=911.html#post32856"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -23011,7 +23011,7 @@ Hãy nhấn chuột vào đây nhé:...">
 	<td class="alt2" title="Replies: 71, Views: 2.481">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  13-11-2003 <span class="time">13:35</span><br />
- by <a href="#" rel="nofollow">meoluoi</a> <a href="showthread.php?p=14756#post14756"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">meoluoi</a> <a href="showthread.php-t=514.html#post14756"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -23179,7 +23179,7 @@ http://www.jikos.cz/~dankr/aenima/aenima20.zip...">
 	<td class="alt2" title="Replies: 17, Views: 329">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-10-2003 <span class="time">22:04</span><br />
- by <a href="#" rel="nofollow">utada</a> <a href="showthread.php?p=12519#post12519"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">utada</a> <a href="showthread.php-t=515.html#post12519"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -23231,7 +23231,7 @@ http://www.jikos.cz/~dankr/aenima/aenima20.zip...">
 	<td class="alt2" title="Replies: 12, Views: 436">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-09-2003 <span class="time">10:24</span><br />
- by <a href="#" rel="nofollow">zorro</a> <a href="showthread.php?p=10779#post10779"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">zorro</a> <a href="showthread.php-t=580.html#post10779"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -23396,7 +23396,7 @@ Muốn tắt máy thì cũng ấn cái nút...">
 	<td class="alt2" title="Replies: 28, Views: 437">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-07-2003 <span class="time">17:15</span><br />
- by <a href="#" rel="nofollow">dnq</a> <a href="showthread.php?p=8852#post8852"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">dnq</a> <a href="showthread.php-t=421.html#post8852"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -23554,7 +23554,7 @@ Config cả 1h rồi mà toàn :can not connect to database. Kiểu này chắc 
 	<td class="alt2" title="Replies: 17, Views: 209">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  25-09-2002 <span class="time">01:02</span><br />
- by <a href="#" rel="nofollow">Mummyre</a> <a href="showthread.php?p=500#post500"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Mummyre</a> <a href="showthread.php-t=18.html#post500"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
