--- a/forumdisplay.php-f=14.html
+++ b/forumdisplay.php-f=14.html
@@ -3045,7 +3045,7 @@ Klnet trước đây có board Hải ngoại nhưng bây giờ...">
 	<td class="alt2" title="Replies: 23, Views: 449">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  16-02-2006 <span class="time">06:26</span><br />
- by <a href="#" rel="nofollow">oddball</a> <a href="showthread.php?p=117376#post117376"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">oddball</a> <a href="showthread.php-t=2594.html#post117376"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -3150,7 +3150,7 @@ Vậy thì giới thiệu chút cho bà con quê nhà bít nha.Thanks&#33;&#33;"
 	<td class="alt2" title="Replies: 375, Views: 6.848">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-12-2005 <span class="time">00:21</span><br />
- by <a href="#" rel="nofollow">Pierce</a> <a href="showthread.php?p=102117#post102117"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Pierce</a> <a href="showthread.php-page=4-t=1099.html#post102117"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -3411,7 +3411,7 @@ Vậy thì giới thiệu chút cho bà con quê nhà bít nha.Thanks&#33;&#33;"
 	<td class="alt2" title="Replies: 86, Views: 1.796">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  20-08-2005 <span class="time">20:21</span><br />
- by <a href="#" rel="nofollow">B_Cool</a> <a href="showthread.php?p=71974#post71974"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">B_Cool</a> <a href="showthread.php-t=1095.html#post71974"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -3464,7 +3464,7 @@ Vậy thì giới thiệu chút cho bà con quê nhà bít nha.Thanks&#33;&#33;"
 	<td class="alt2" title="Replies: 25, Views: 626">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  25-06-2005 <span class="time">00:27</span><br />
- by <a href="#" rel="nofollow">khanh_trung</a> <a href="showthread.php?p=63739#post63739"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">khanh_trung</a> <a href="showthread.php-t=1202.html#post63739"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
