--- a/search.php-do=finduser-starteronly=1-u=1220.html
+++ b/search.php-do=finduser-starteronly=1-u=1220.html
@@ -285,7 +285,7 @@
 	<td class="alt2" title="Replies: 27, Views: 280">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  01-07-2005 <span class="time">21:20</span><br />
- by <a href="#" rel="nofollow">Drdollars</a> <a href="showthread.php?p=64566#post64566"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Drdollars</a> <a href="showthread.php-t=2498.html#post64566"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
