--- a/search.php-do=finduser-starteronly=1-u=148.html
+++ b/search.php-do=finduser-starteronly=1-u=148.html
@@ -286,7 +286,7 @@
 	<td class="alt2" title="Replies: 34, Views: 366">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-12-2003 <span class="time">11:49</span><br />
- by <a href="#" rel="nofollow">NRG_4rever</a> <a href="showthread.php?p=16708#post16708"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">NRG_4rever</a> <a href="showthread.php-t=839.html#post16708"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
