--- a/search.php-do=finduser-starteronly=1-u=1556.html
+++ b/search.php-do=finduser-starteronly=1-u=1556.html
@@ -283,7 +283,7 @@
 	<td class="alt2" title="Replies: 29, Views: 226">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-02-2005 <span class="time">19:47</span><br />
- by <a href="#" rel="nofollow">renzokuken</a> <a href="showthread.php?p=49343#post49343"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">renzokuken</a> <a href="showthread.php-t=2223.html#post49343"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -337,7 +337,7 @@
 	<td class="alt2" title="Replies: 28, Views: 243">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  05-02-2005 <span class="time">19:26</span><br />
- by <a href="#" rel="nofollow">burself</a> <a href="showthread.php?p=49210#post49210"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">burself</a> <a href="showthread.php-t=2224.html#post49210"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -391,7 +391,7 @@
 	<td class="alt2" title="Replies: 15, Views: 172">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  22-01-2005 <span class="time">09:00</span><br />
- by <a href="#" rel="nofollow">Bleo</a> <a href="showthread.php?p=47424#post47424"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Bleo</a> <a href="showthread.php-t=2215.html#post47424"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
