--- a/search.php-do=finduser-starteronly=1-u=30.html
+++ b/search.php-do=finduser-starteronly=1-u=30.html
@@ -287,7 +287,7 @@
 	<td class="alt2" title="Replies: 29, Views: 334">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  20-08-2003 <span class="time">08:06</span><br />
- by <a href="#" rel="nofollow">shmily16</a> <a href="showthread.php?p=10167#post10167"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">shmily16</a> <a href="showthread.php-t=277.html#post10167"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -397,7 +397,7 @@ THẰNG ĐIÊN NÀY LÂU NAY MUỐN TÌM BẠN THÍCH CHƠI CM MÀ CHẲNG THẤ
 	<td class="alt2" title="Replies: 13, Views: 133">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  16-04-2003 <span class="time">21:27</span><br />
- by <a href="#" rel="nofollow">tuthmosis</a> <a href="showthread.php?p=4415#post4415"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">tuthmosis</a> <a href="showthread.php-t=203.html#post4415"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
