--- a/search.php-do=finduser-starteronly=1-u=37.html
+++ b/search.php-do=finduser-starteronly=1-u=37.html
@@ -458,7 +458,7 @@ Trong suốt sự nghiệp cầu thủ ngắn ngủi nhưng vinh quang của mì
 	<td class="alt2" title="Replies: 20, Views: 169">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  14-08-2003 <span class="time">12:48</span><br />
- by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php?p=9755#post9755"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DR_DRE</a> <a href="showthread.php-t=469.html#post9755"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
