--- a/search.php-do=finduser-starteronly=1-u=479.html
+++ b/search.php-do=finduser-starteronly=1-u=479.html
@@ -391,7 +391,7 @@
 	<td class="alt2" title="Replies: 40, Views: 579">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-10-2005 <span class="time">20:33</span><br />
- by <a href="#" rel="nofollow">KCnoodles</a> <a href="showthread.php?p=84593#post84593"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">KCnoodles</a> <a href="showthread.php-t=2341.html#post84593"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -610,7 +610,7 @@ bạn nghĩ rằng bóng rổ chỉ hợp với nhưng anh chàng cao to...">
 	<td class="alt2" title="Replies: 22, Views: 178">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  30-05-2005 <span class="time">22:18</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=60076#post60076"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-t=2302.html#post60076"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -938,7 +938,7 @@ chac y cua...">
 	<td class="alt2" title="Replies: 15, Views: 221">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  13-10-2004 <span class="time">15:46</span><br />
- by <a href="#" rel="nofollow">Gấu béo</a> <a href="showthread.php?p=41176#post41176"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">Gấu béo</a> <a href="showthread.php-t=1777.html#post41176"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -1102,7 +1102,7 @@ Lưu ý post bài đầy đủ dấu">
 	<td class="alt2" title="Replies: 86, Views: 785">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  17-06-2004 <span class="time">05:30</span><br />
- by <a href="#" rel="nofollow">pooh</a> <a href="showthread.php?p=36019#post36019"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">pooh</a> <a href="showthread.php-t=1221.html#post36019"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
