--- a/search.php-do=finduser-starteronly=1-u=94.html
+++ b/search.php-do=finduser-starteronly=1-u=94.html
@@ -337,7 +337,7 @@
 	<td class="alt2" title="Replies: 13, Views: 279">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  04-07-2005 <span class="time">22:12</span><br />
- by <a href="#" rel="nofollow">frankie</a> <a href="showthread.php?p=64961#post64961"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">frankie</a> <a href="showthread.php-t=2372.html#post64961"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -391,7 +391,7 @@
 	<td class="alt2" title="Replies: 30, Views: 307">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  06-07-2004 <span class="time">05:02</span><br />
- by <a href="#" rel="nofollow">bach_idust</a> <a href="showthread.php?p=38408#post38408"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">bach_idust</a> <a href="showthread.php-t=1726.html#post38408"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
@@ -445,7 +445,7 @@
 	<td class="alt2" title="Replies: 17, Views: 206">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  14-06-2004 <span class="time">00:22</span><br />
- by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php?p=35628#post35628"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">DIEPMYLOVE</a> <a href="showthread.php-t=1080.html#post35628"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
