--- a/search.php-do=finduser-starteronly=1-u=968.html
+++ b/search.php-do=finduser-starteronly=1-u=968.html
@@ -285,7 +285,7 @@ nếu mọi nguời ủng hộ thì tiếp tục ko thì del B-)">
 	<td class="alt2" title="Replies: 380, Views: 1.595">
  <div class="smallfont" style="text-align:right; white-space:nowrap">
  10-09-2005 <span class="time">23:02</span><br />
- by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php?p=78370#post78370"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
+ by <a href="#" rel="nofollow">inu_yasha89</a> <a href="showthread.php-page=4-t=2557.html#post78370"><img class="inlineimg" src="styles/klstyle/buttons/lastpost.gif" alt="Go to last post" border="0" /></a>
  </div>
 	</td>
 	
