--- a/showthread.php-t=4844.html
+++ b/showthread.php-t=4844.html
@@ -351,7 +351,7 @@ Title - gọi nôm na là Danh hiệu - là dòng chữ nằm ngay trên avatar 
 	</table>
 </div><font size="4"><font color="Blue">Chi tiết xin mời ghé qua<br />
  <a href="#" target="_blank">Gian hàng title</a><br />
-<a href="/kbank.php?do=shop&amp;itemname=&amp;username=rockbaby%2Cmidori&amp;date_type=0&amp;day=15&amp;month=2&amp;year=2008&amp;itemtypeid=1" target="_blank">Gian hàng avatar cỡ lớn</a></font></font><br />
+<a href="#" target="_blank">Gian hàng avatar cỡ lớn</a></font></font><br />
 <br />
 Khách mua số lượng lớn, mua dài hạn vui lòng liên hệ trực tiếp để có giá tốt nhất.</div>
  <!-- / message -->
